responsive grid with all items

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <header>
-      <h1>This is a header!</h1>
+      <h1>This is a header</h1>
     </header>
 
     <nav>
@@ -17,11 +17,9 @@
     </nav>
 
     <main>
-      <button id="openPopup">Open Popup</button>
+      <div id="product-grid" class="grid"></div>
 
-      <div id="popupContainer"></div>
-
-      <script src="popup.js"></script>
+      <script src="allItems.js"></script>
     </main>
 
     <footer>
