--- a/index.html
+++ b/index.html
@@ -13,7 +13,24 @@
     </header>
 
     <nav>
-      <a href="index.html">Home</a>
+      <a href="index.html">Logo</a>
+      <input type="text" placeholder="Search for anything"/>
+      <select>
+        <option value="Category 1">Category 1</option>
+        <option value="Category 2">Category 2</option>
+        <!--TODO: get a list of categories from the JSON instead-->
+      </select>
+      <button>Search!</button>
+      <div class="dropdown">
+        <button>My Account</button>
+        <div class="dropdown-content">
+          <button>Register</button>
+          <button>Login</button>
+          <input type="text" placeholder="Username"/>
+          <input type="text" placeholder="Password"/>
+          <button>Submit</button>
+        </div>
+      </div>
     </nav>
 
     <main>
