--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <body>
     <header>
       <a href="index.html">Logo</a>
-      <input type="text" placeholder="Search for anything" />
+      <input type="text" id="search-bar" placeholder="Search for anything" />
       <select id="category-select">
         <option value="" disabled selected>Filter</option>
         <script src="categories.js"></script>
