adds functionality to pull up cart.html

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
           <!--TODO: move this script somewhere better ^^^ -->
         </div>
       </div>
-      <button>My Cart</button>
+      <button id="cart-button">My Cart</button>
     </header>
 
     <nav></nav>
@@ -81,7 +81,13 @@
         </div>
       </div>
 
+      <!-- Cart Slide-In -->
+      <div id="cart-modal" class="cart-modal hidden">
+        <div id="cart-body" class="cart-body"></div>
+      </div>
+
       <script src="allItems.js"></script>
+      <script src="cart.js"></script>
       <script src="search.js"></script>
     </main>
 
