--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
     <main>
       <div id="product-grid" class="grid"></div>
 
-      <!-- Popup Modal -->
+      <!-- Popup Modal for products -->
       <div id="product-modal" class="modal hidden">
         <div class="modal-content">
           <span class="close-btn">&times;</span>
@@ -83,6 +83,7 @@
 
       <script src="allItems.js"></script>
       <script src="search.js"></script>
+    </div>
     </main>
 
     <footer>
