Continued work on cart.html

--- a/cart.html
+++ b/cart.html
@@ -1,16 +1,8 @@
-<div id="popup-content??? TODO: change" class="popup-layout">
-    <p id="prod-category" class="product-category"></p>
-    <img id="prod-img" alt="Product image" />
-
-    <h2 id="prod-title??"></h2>
-    <p class="product-price">Price: $<span id="prod-price??"></span></p>
-    <p id="prod-desc??"></p>
-    <p><strong>In Stock:</strong> <span id="prod-stock??"></span></p>
-
-    <div class="quantity-container">
-    <label for="quantity??">Quantity:</label>
-    <input type="number" id="quantity??" value="1" min="1" />
+<div id="cart-container">
+    <h2>Your Cart</h2>
+    <div id="cart-items"></div>
+    <div class="cart-footer">
+        <p><strong>Total:</strong> $<span id="cart-total">0.00</span></p>
+        <button id="checkout-btn">Checkout</button>
     </div>
-
-    <button class="remove-cart-btn">Remove</button>
 </div>
