began working on cart html and js

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
           <!--TODO: move this script somewhere better ^^^ -->
         </div>
       </div>
-      <button>My Cart</button>
+      <a href="cart.html"><button>My Cart</button></a>
     </header>
 
     <nav></nav>
@@ -88,6 +88,7 @@
     <footer>
       <p>this is a footer</p>
     </footer>
+    <!-- placeholder for the sidebar -->
   </body>
   <script>
     // track the last clicked element, for use in CSS
@@ -99,4 +100,3 @@
     });
   </script>
 </html>
-<!-- testing branch -->
