added filter feature functionality to home page

--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
       <a href="index.html">Logo</a>
       <input type="text" id="search-bar" placeholder="Search for anything" />
       <select id="category-select">
-        <option value="" disabled selected>Filter</option>
+        <option value="all">All Items</option>
+        <!-- <option value="" disabled selected>Filter</option> -->
         <script src="categories.js"></script>
       </select>
       <button id="search-button">Search!</button>
