--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       </select>
       <button id="search-button">Search!</button>
       <div class="dropdown">
-        <button class="dropdown-button">My Account</button>
+        <button class="dropdown-button">Login / Register</button>
         <div class="dropdown-content">
           <div class="tab-area">
             <button
@@ -67,6 +67,9 @@
         </div>
       </div>
       <button id="cart-button">My Cart</button>
+      <a href="dashboard.html"
+        ><button id="dashboard-button">Dashboard</button></a
+      >
     </header>
 
     <nav></nav>
@@ -93,6 +96,8 @@
         <button id="clear-cart-btn">Clear Cart</button>
         <button id="checkout-btn">Checkout</button>
       </div>
+      <!-- Overlay behind cart -->
+      <div id="cart-overlay" class="cart-overlay hidden"></div>
 
       <script src="allItems.js"></script>
       <script src="cart.js"></script>
