refactoring code and organization and bug fixes

--- a/dashboard.html
+++ b/dashboard.html
@@ -30,6 +30,6 @@
       </section>
     </main>
 
-    <script src="dashboard.js"></script>
+    <script src="scripts/dashboard.js"></script>
   </body>
 </html>
