--- a/index.html
+++ b/index.html
@@ -68,6 +68,7 @@
           </div>
         </div>
       </div>
+      <button class="dropdown-button">My Profile</button>
       <button id="cart-button">My Cart</button>
       <a href="dashboard.html"
         ><button id="dashboard-button">Dashboard</button></a
