--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
             <div id="register-tab-content" class="tab-content">
               <form id="register-form">
                 <input type="email" placeholder="Email" name="email" /><br />
-                <input type="text" placeholder="Username" name="name" />
+                <input type="text" placeholder="name" name="name" />
                 <input
                   type="password"
                   placeholder="Password"
@@ -68,7 +68,6 @@
           </div>
         </div>
       </div>
-      <button class="dropdown-button">My Profile</button>
       <button id="cart-button">My Cart</button>
       <a href="dashboard.html"
         ><button id="dashboard-button">Dashboard</button></a
