hide dashboard if not logged in, began implementing cart backend

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <script src="scripts/categories.js"></script>
       </select>
       <button id="search-button">Search!</button>
-      <div class="dropdown">
+      <div id="login-dropdown" class="dropdown">
         <button class="dropdown-button">Login / Register</button>
         <div class="dropdown-content">
           <div class="tab-area">
@@ -121,4 +121,5 @@
     });
   </script>
   <script src="scripts/tabs.js"></script>
+  <script src="showHideLogin.js"></script>
 </html>
