--- a/index.html
+++ b/index.html
@@ -121,5 +121,5 @@
     });
   </script>
   <script src="scripts/tabs.js"></script>
-  <script src="showHideLogin.js"></script>
+  <script src="scripts/showHideLogin.js"></script>
 </html>
