--- a/index.html
+++ b/index.html
@@ -4,80 +4,91 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-
+  
     <title>Slop Shop</title>
 
     <!-- Styles -->
     <link rel="stylesheet" href="styles.css" />
   </head>
-  <body>
-    <header>
-      <a href="scripts/index.html">Logo</a>
-      <input type="text" id="search-bar" placeholder="Search for anything" />
-      <select id="category-select">
-        <option value="all">All Items</option>
-        <!-- <option value="" disabled selected>Filter</option> -->
-        <script src="scripts/categories.js"></script>
-      </select>
-      <button id="search-button">Search!</button>
-      <div id="login-dropdown" class="dropdown">
-        <button class="dropdown-button">Login / Register</button>
-        <div class="dropdown-content">
-          <div class="tab-area">
-            <button
-              class="tab active"
-              onclick="changeTab(event, 'login-tab-content')"
-            >
-              Login
-            </button>
-            <button
-              class="tab"
-              onclick="changeTab(event, 'register-tab-content')"
-            >
-              Register
-            </button>
-            <br />
-            <div
-              id="login-tab-content"
-              class="tab-content"
-              style="display: block"
-            >
-            <form id="login-form">
-                <input type="text" placeholder="Email/Username" name="name" />
-                <input
-                  type="password"
-                  placeholder="Password"
-                  autocomplete="current-password"
-                  name="password"
-                /><br />
-                <button>Login</button>
-              </form>
-            </div>
-            <script src="scripts/login.js"></script>
-            <div id="register-tab-content" class="tab-content">
-                <form id="register-form">
-                    <input type="email" placeholder="Email" name="email" /><br />
-                    <input type="text" placeholder="name" name="name" />
-                    <input
-                        type="password"
-                        placeholder="Password"
-                        name="password"
-                        required
-                    /><br />
-                    <button type="submit">Register</button>
+    <body class="dashboard-dark">
+      <header class="slime-navbar">
+        <div class="nav-left">
+          <img src="images/Logo.png" alt="Slop Shop Logo" class="nav-logo"/>
+          <a href="scripts/index.html"></a> 
+        </div>
+        <div class="nav-center">
+          <div class="search-wrapper">
+        <input type="text" id="search-bar" placeholder="Search for anything" />
+        
+        <select id="category-select">
+          <option value="all">All Items</option>
+          <!-- <option value="" disabled selected>Filter</option> -->
+          <script src="scripts/categories.js"></script>
+        </select>
+        <button id="search-button" class="slime-btn">Search!</button>
+      </div>
+      <div class="nav-right">
+        <div id="login-dropdown" class="dropdown">
+          <button class="dropdown-button slime-btn">Login / Register</button>
+          <div class="dropdown-content">
+            <div class="tab-area">
+              <button
+                class="tab active"
+                onclick="changeTab(event, 'login-tab-content')"
+              >
+                Login
+              </button>
+              <button
+                class="tab"
+                onclick="changeTab(event, 'register-tab-content')"
+              >
+                Register
+              </button>
+              <br />
+              <div
+                id="login-tab-content"
+                class="tab-content"
+                style="display: block"
+              >
+                <form id="login-form">
+                  <input type="text" placeholder="Email/Username" name="name" />
+                  <input
+                    type="password"
+                    placeholder="Password"
+                    autocomplete="current-password"
+                    name="password"
+                  /><br />
+                  <button>Login</button>
                 </form>
+              </div>
+              <script src="scripts/login.js"></script>
+              <div id="register-tab-content" class="tab-content">
+                  <form id="register-form">
+                      <input type="email" placeholder="Email" name="email" /><br />
+                      <input type="text" placeholder="name" name="name" />
+                      <input
+                          type="password"
+                          placeholder="Password"
+                          name="password"
+                          required
+                      /><br />
+                      <button type="submit">Register</button>
+                  </form>
+              </div>
+              <script src="scripts/register.js"></script>
             </div>
-            <script src="scripts/register.js"></script>
           </div>
         </div>
-
         <button id="cart-button" class="slime-btn">My Cart</button>
 
         <a href="dashboard.html">
           <button id="dashboard-button" class="slime-btn">Dashboard</button>
         </a>
-      </div>
-    </nav>
+        </div>
+      
+    </header>
+
+    <nav></nav>
 
     <!-- main product area -->
     <main>
@@ -107,7 +118,7 @@
       <div id="cart-overlay" class="cart-overlay hidden"></div>
 
       <script src="scripts/allItems.js"></script>
-      <script src="scirpts/cart.js"></script>
+      <script src="scripts/cart.js"></script>
       <script src="scripts/search.js"></script>
     </div>
     </main>
