changed the product category into a button to filter to that category

--- a/product.html
+++ b/product.html
@@ -1,6 +1,8 @@
 <div id="popup-content" class="popup-layout">
   <div class="left-col">
-    <p id="prod-category" class="product-category"></p>
+    <p class="product-category">
+      <a id="prod-category-link"></a>
+    </p>
     <img id="prod-img" alt="Product image" />
   </div>
 
