replaced most of server code to work correctly

--- a/index.html
+++ b/index.html
@@ -70,8 +70,8 @@
                           type="password"
                           placeholder="Password"
                           name="password"
-                          required
-                      /><br />
+                          required/>
+                          <br />
                       <button type="submit">Register</button>
                   </form>
               </div>
@@ -130,7 +130,7 @@
       <p>© 2025 Slop Shop. Probably not a scam.</p>
     </footer>
     <!-- placeholder for the sidebar -->
-  </body>
+  
   <script>
     // track the last clicked element, for use in CSS
     let lastClickedElement = document.querySelector("body"); // default element
@@ -142,4 +142,5 @@
   </script>
   <script src="scripts/tabs.js"></script>
   <script src="scripts/showHideLogin.js"></script>
+  </body>
 </html>
