--- a/dashboard.html
+++ b/dashboard.html
@@ -6,30 +6,62 @@
     <title>User Dashboard</title>
     <link rel="stylesheet" href="styles.css" />
   </head>
-  <body>
-    <header>
-      <a href="index.html">← Back to Home</a>
-      <h1 id="greeting">Welcome!</h1>
-    </header>
 
+  <body class="dashboard-dark">
+    <!-- Slimed Navbar -->
+    <nav class="slime-navbar">
+      <div class="nav-left">
+        <a href="index.html">
+          <img src="images/Logo.png" alt="Slop Shop Logo" class="nav-logo" />
+        </a>
+      </div>
+
+      <div class="nav-center">
+        <div class="search-wrapper">
+          <input
+            type="text"
+            id="search-bar"
+            placeholder="Search for anything"
+          />
+
+          <select id="category-select">
+            <option value="all">All Items</option>
+          </select>
+
+          <button id="search-button" class="slime-btn">Search</button>
+        </div>
+      </div>
+
+      <div class="nav-right">
+        <button id="cart-button" class="slime-btn">My Cart</button>
+
+        <a href="dashboard.html">
+          <button id="dashboard-button" class="slime-btn">Dashboard</button>
+        </a>
+      </div>
+    </nav>
+
+    <!-- Dashboard Container -->
     <main class="dashboard">
+      <h1 class="dash-greeting" id="greeting">Good afternoon, Tanner!</h1>
+
       <section class="user-info">
         <h2>Your Info</h2>
+        <!-- fill out with mongo db data -->
         <p><strong>Username:</strong> <span id="username">N/A</span></p>
         <p><strong>Email:</strong> <span id="email">N/A</span></p>
         <p><strong>Date Joined:</strong> <span id="date-joined">N/A</span></p>
       </section>
 
-      <section class="order-history">
+      <section>
         <h2>Order History</h2>
-        <div id="order-list"></div>
+        <div id="order-list" class="order-list"></div>
       </section>
 
-      <section class="account-actions">
-        <button id="logout-btn">Logout</button>
-      </section>
+      <button id="logout-btn">Logout</button>
     </main>
 
+    <!-- Scripts -->
     <script src="scripts/dashboard.js"></script>
   </body>
 </html>
