--- a/dashboard.html
+++ b/dashboard.html
@@ -9,37 +9,84 @@
 
   <body class="dashboard-dark">
     <!-- Slimed Navbar -->
-    <nav class="slime-navbar">
+    <header class="slime-navbar">
       <div class="nav-left">
-        <a href="index.html">
-          <img src="images/Logo.png" alt="Slop Shop Logo" class="nav-logo" />
-        </a>
+        <img src="images/Logo.png" alt="Slop Shop Logo" class="nav-logo"/>
+        <a href="index.html"></a> 
       </div>
-
       <div class="nav-center">
         <div class="search-wrapper">
-          <input
-            type="text"
-            id="search-bar"
-            placeholder="Search for anything"
-          />
-
-          <select id="category-select">
-            <option value="all">All Items</option>
-          </select>
-
-          <button id="search-button" class="slime-btn">Search</button>
+      <input type="text" id="search-bar" placeholder="Search for anything" />
+      
+      <select id="category-select">
+        <option value="all">All Items</option>
+        <!-- <option value="" disabled selected>Filter</option> -->
+        <script src="scripts/categories.js"></script>
+      </select>
+      <button id="search-button" class="slime-btn">Search!</button>
+    </div>
+    <div class="nav-right">
+      <div id="login-dropdown" class="dropdown">
+        <button class="dropdown-button slime-btn">Login / Register</button>
+        <div class="dropdown-content">
+          <div class="tab-area">
+            <button
+              class="tab active"
+              onclick="changeTab(event, 'login-tab-content')"
+            >
+              Login
+            </button>
+            <button
+              class="tab"
+              onclick="changeTab(event, 'register-tab-content')"
+            >
+              Register
+            </button>
+            <br />
+            <div
+              id="login-tab-content"
+              class="tab-content"
+              style="display: block"
+            >
+              <form id="login-form">
+                <input type="text" placeholder="Email/Username" name="name" />
+                <input
+                  type="password"
+                  placeholder="Password"
+                  autocomplete="current-password"
+                  name="password"
+                /><br />
+                <button>Login</button>
+              </form>
+            </div>
+            <script src="scripts/login.js"></script>
+            <div id="register-tab-content" class="tab-content">
+                <form id="register-form">
+                    <input type="email" placeholder="Email" name="email" /><br />
+                    <input type="text" placeholder="name" name="name" />
+                    <input
+                        type="password"
+                        placeholder="Password"
+                        name="password"
+                        required/>
+                        <br />
+                    <button type="submit">Register</button>
+                </form>
+            </div>
+            <script src="scripts/register.js"></script>
+          </div>
         </div>
       </div>
+      <button id="cart-button" class="slime-btn">My Cart</button>
 
-      <div class="nav-right">
-        <button id="cart-button" class="slime-btn">My Cart</button>
-
-        <a href="dashboard.html">
-          <button id="dashboard-button" class="slime-btn">Dashboard</button>
-        </a>
+      <a href="dashboard.html">
+        <button id="dashboard-button" class="slime-btn">Dashboard</button>
+      </a>
+      <a href="index.html">
+        <button id="dashboard-button" class="slime-btn">Home</button></a>
       </div>
-    </nav>
+    
+  </header>
 
     <!-- Dashboard Container -->
     <main class="dashboard">
