--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <header class="slime-navbar">
         <div class="nav-left">
           <img src="images/Logo.png" alt="Slop Shop Logo" class="nav-logo"/>
-          <a href="scripts/index.html"></a> 
+          <a href="index.html"></a> 
         </div>
         <div class="nav-center">
           <div class="search-wrapper">
@@ -33,13 +33,13 @@
           <div class="dropdown-content">
             <div class="tab-area">
               <button
-                class="tab active"
+                class="tab active slime-btn"
                 onclick="changeTab(event, 'login-tab-content')"
               >
                 Login
               </button>
               <button
-                class="tab"
+                class="tab slime-btn"
                 onclick="changeTab(event, 'register-tab-content')"
               >
                 Register
@@ -58,7 +58,7 @@
                     autocomplete="current-password"
                     name="password"
                   /><br />
-                  <button>Login</button>
+                  <button class="slime-btn">Login</button>
                 </form>
               </div>
               <script src="scripts/login.js"></script>
@@ -72,7 +72,7 @@
                           name="password"
                           required/>
                           <br />
-                      <button type="submit">Register</button>
+                      <button class="slime-btn" type="submit">Register</button>
                   </form>
               </div>
               <script src="scripts/register.js"></script>
@@ -109,7 +109,7 @@
           <button id="close-cart">×</button>
         </div>
         <div id="cart-items"></div>
-        <p>Subtotal: $<span id="cart-total">0.00</span></p>
+        <p id="cart-subtotal">Subtotal: $<span id="cart-total">0.00</span></p>
         <button id="clear-cart-btn" class="slime-btn">Clear Cart</button>
         <button id="checkout-btn" class="slime-btn">Checkout</button>
       </div>
@@ -131,15 +131,27 @@
     </footer>
     <!-- placeholder for the sidebar -->
   
-  <script>
-    // track the last clicked element, for use in CSS
-    let lastClickedElement = document.querySelector("body"); // default element
-    document.addEventListener("click", (event) => {
-      lastClickedElement.classList.remove("last-clicked");
-      lastClickedElement = event.target;
-      lastClickedElement.classList.add("last-clicked");
+    <script>
+      const dropdownBtn = document.querySelector('#login-dropdown .dropdown-button');
+      const dropdownMenu = document.querySelector('#login-dropdown .dropdown-content');
+
+      // open/close dropdown
+      dropdownBtn.addEventListener('click', (e) => {
+      e.stopPropagation();
+      dropdownMenu.classList.toggle('show');
     });
-  </script>
+
+    // prevent clicks inside dropdown from closing it
+    dropdownMenu.addEventListener('click', (e) => {
+    e.stopPropagation();
+  });
+
+    // close when clicking anywhere else
+    document.addEventListener('click', () => {
+    dropdownMenu.classList.remove('show');
+  });
+
+    </script>
   <script src="scripts/tabs.js"></script>
   <script src="scripts/showHideLogin.js"></script>
   </body>
