--- a/product.html
+++ b/product.html
@@ -17,6 +17,6 @@
       <input type="number" id="quantity" value="1" min="1" />
     </div>
 
-    <button class="modal-add-cart-btn, add-to-cart-btn">Add to Cart</button>
+    <button class="modal-add-cart-btn add-to-cart-btn">Add to Cart</button>
   </div>
 </div>
