fixed header in the dashboard and slop shop logo

--- a/index.html
+++ b/index.html
@@ -13,8 +13,7 @@
     <body class="dashboard-dark">
       <header class="slime-navbar">
         <div class="nav-left">
-          <img src="images/Logo.png" alt="Slop Shop Logo" class="nav-logo"/>
-          <a href="index.html"></a> 
+          <a href="index.html"><img src="images/Logo.png" alt="Slop Shop Logo" class="nav-logo"/></a> 
         </div>
         <div class="nav-center">
           <div class="search-wrapper">
