--- a/dashboard.html
+++ b/dashboard.html
@@ -11,82 +11,33 @@
     <!-- Slimed Navbar -->
     <header class="slime-navbar">
       <div class="nav-left">
-        <img src="images/Logo.png" alt="Slop Shop Logo" class="nav-logo"/>
-        <a href="index.html"></a> 
+        <a href="index.html"><img src="images/Logo.png" alt="Slop Shop Logo" class="nav-logo"/></a> 
       </div>
       <div class="nav-center">
         <div class="search-wrapper">
-      <input type="text" id="search-bar" placeholder="Search for anything" />
+          <input type="text" id="search-bar" placeholder="Search for anything" />
       
-      <select id="category-select">
-        <option value="all">All Items</option>
-        <!-- <option value="" disabled selected>Filter</option> -->
-        <script src="scripts/categories.js"></script>
-      </select>
-      <button id="search-button" class="slime-btn">Search!</button>
-    </div>
-    <div class="nav-right">
-      <div id="login-dropdown" class="dropdown">
-        <button class="dropdown-button slime-btn">Login / Register</button>
-        <div class="dropdown-content">
-          <div class="tab-area">
-            <button
-              class="tab active"
-              onclick="changeTab(event, 'login-tab-content')"
-            >
-              Login
-            </button>
-            <button
-              class="tab"
-              onclick="changeTab(event, 'register-tab-content')"
-            >
-              Register
-            </button>
-            <br />
-            <div
-              id="login-tab-content"
-              class="tab-content"
-              style="display: block"
-            >
-              <form id="login-form">
-                <input type="text" placeholder="Email/Username" name="name" />
-                <input
-                  type="password"
-                  placeholder="Password"
-                  autocomplete="current-password"
-                  name="password"
-                /><br />
-                <button>Login</button>
-              </form>
-            </div>
-            <script src="scripts/login.js"></script>
-            <div id="register-tab-content" class="tab-content">
-                <form id="register-form">
-                    <input type="email" placeholder="Email" name="email" /><br />
-                    <input type="text" placeholder="name" name="name" />
-                    <input
-                        type="password"
-                        placeholder="Password"
-                        name="password"
-                        required/>
-                        <br />
-                    <button type="submit">Register</button>
-                </form>
-            </div>
-            <script src="scripts/register.js"></script>
-          </div>
-        </div>
+          <select id="category-select">
+            <option value="all">All Items</option>
+            <!-- <option value="" disabled selected>Filter</option> -->
+            <script src="scripts/categories.js"></script>
+          </select>
+        <button id="search-button" class="slime-btn">Search!</button>
       </div>
-      <button id="cart-button" class="slime-btn">My Cart</button>
+      <div class="nav-right">
+        <button id="cart-button" class="slime-btn">My Cart</button>
 
-      <a href="dashboard.html">
-        <button id="dashboard-button" class="slime-btn">Dashboard</button>
-      </a>
-      <a href="index.html">
-        <button id="dashboard-button" class="slime-btn">Home</button></a>
+        <a href="dashboard.html">
+          <button id="dashboard-button" class="slime-btn">Dashboard</button>
+        </a>
+        <!-- * the user can click on "slop shop" to go home *
+        <a href="index.html">
+          <button id="dashboard-button" class="slime-btn">Home</button>
+        </a>
+        -->
       </div>
     
-  </header>
+    </header>
 
     <!-- Dashboard Container -->
     <main class="dashboard">
