--- a/index.html
+++ b/index.html
@@ -4,19 +4,17 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-  
     <title>Slop Shop</title>
-
-    <!-- Styles -->
     <link rel="stylesheet" href="styles.css" />
   </head>
-    <body class="dashboard-dark">
-      <header class="slime-navbar">
-        <div class="nav-left">
-          <a href="index.html"><img src="images/Logo.png" alt="Slop Shop Logo" class="nav-logo"/></a> 
-        </div>
-        <div class="nav-center">
-          <div class="search-wrapper">
+
+  <body class="dashboard-dark">
+    <header class="slime-navbar">
+      <div class="nav-left">
+        <a href="index.html"><img src="images/Logo.png" alt="Slop Shop Logo" class="nav-logo"/></a> 
+      </div>
+      <div class="nav-center">
+        <div class="search-wrapper">
         <input type="text" id="search-bar" placeholder="Search for anything" />
         
         <select id="category-select">
@@ -59,6 +57,7 @@
                   /><br />
                   <button class="slime-btn">Login</button>
                 </form>
+                <p id="login-error-message" class="error-message"></p>
               </div>
               <script src="scripts/login.js"></script>
               <div id="register-tab-content" class="tab-content">
@@ -73,6 +72,7 @@
                           <br />
                       <button class="slime-btn" type="submit">Register</button>
                   </form>
+                  <p id="register-error-message" class="error-message"></p>
               </div>
               <script src="scripts/register.js"></script>
             </div>
@@ -83,7 +83,7 @@
         <a href="dashboard.html">
           <button id="dashboard-button" class="slime-btn">Dashboard</button>
         </a>
-        </div>
+      </div>
       
     </header>
 
