cleaned up HTML files and style.css

--- a/dashboard.html
+++ b/dashboard.html
@@ -11,18 +11,23 @@
     <!-- Slimed Navbar -->
     <header class="slime-navbar">
       <div class="nav-left">
-        <a href="index.html"><img src="images/Logo.png" alt="Slop Shop Logo" class="nav-logo"/></a> 
+        <a href="index.html"
+          ><img src="images/Logo.png" alt="Slop Shop Logo" class="nav-logo"
+        /></a>
       </div>
       <div class="nav-center">
         <div class="search-wrapper">
-          <input type="text" id="search-bar" placeholder="Search for anything" />
-      
+          <input
+            type="text"
+            id="search-bar"
+            placeholder="Search for anything"
+          />
           <select id="category-select">
             <option value="all">All Items</option>
-            <!-- <option value="" disabled selected>Filter</option> -->
             <script src="scripts/categories.js"></script>
           </select>
-        <button id="search-button" class="slime-btn">Search!</button>
+          <button id="search-button" class="slime-btn">Search!</button>
+        </div>
       </div>
       <div class="nav-right">
         <button id="cart-button" class="slime-btn">My Cart</button>
@@ -31,7 +36,6 @@
           <button id="dashboard-button" class="slime-btn">Dashboard</button>
         </a>
       </div>
-    
     </header>
 
     <!-- Dashboard Container -->
